--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name='equals'>=</string>
 
     <string name='backspace'>Backspace</string>
+    <string name='spacebar'>⎵</string>
 
     <string name='display'>Enter in a value</string>
 
