--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,12 +19,14 @@
     <string name="help_rules">
         1. Values being squarerooted in Infix Mode must be in parentheses\n
         2. Space must be used to separate operands in Prefix and Postfix Modes\n
-        3. [R] in result means the result has values after the decimal and is not able to be converted to a non-Base 10 format\n
-        4. 4 ( 2 + 3 ) must be written\n
+        3. [R] in result means the result has values after the decimal and is not able to be converted to a non-Base10 format\n
+        4. Division is valid in all bases until displaying the final result when using non-Base10\n
+        5. Numbers are rounded to 7 decimal spaces in respect to Base10\n
+        6. 4 ( 2 + 3 ) must be written\n
         as 4 * ( 2 + 3 )\n
-        5. 2π and 2e must be written\n
+        7. 2π and 2e must be written\n
         as 2 * π and 2 * e\n
-        6. 4 + - 8 must be written\n
+        8. 4 + - 8 must be written\n
         as 4 + ( - 8 )
     </string>
 
